# shumoziyong

./: .gitattributes  .gitignore  2025_C_prediction_experiment_plan.json  AI自动化闭环测试工作流.md  AI闭环工作流执行计划模板.md  MODELING_CAPABILITY_ROADMAP_v1.1.md  NOTICE.md  README.md  UPSTREAM.lock.json  pyproject.toml  requirements.in  requirements.txt  training_log.md  报告.md  数学建模AI优秀论文学习与解题工作流优化版v2.txt
_codex_pdf_a016/: a016_ocr_pages_1_32.txt
checklists/: gate_0_material_diagnosis.md  gate_0_problem_diagnosis.md  gate_1_before_modeling.md  gate_1_model_route.md  gate_2_before_coding.md  gate_2_code_plan.md  gate_3_before_writing.md  gate_3_results_confirmation.md  gate_4_final_review.md  gate_4_paper_confirmation.md  gate_5_final_acceptance.md
code/: geometry_model.py  load_2023B_data.py
contest_v2/: README.md  pyproject.toml
contest_v2/contest_v2/: __init__.py  cli.py  learning_registry.py  migrate_2024c.py  paper_admission.py  question_slice.py  result_ledger.py  review_orchestrator.py  status.py  typst_values.py  verification.py  verify_package.py
contest_v2/examples/2024_C/: PILOT_PLAN.md  build_review_handoff.py  checker.py  main.typ  pilot_common.py  prepare_pilot.py  q1_check.md  q1_model.md  q1_paper.typ  q1_run.py  q2_check.md  q2_model.md  q2_paper.typ  q2_run.py  q3_check.md  q3_model.md  q3_paper.typ  q3_run.py
contest_v2/scripts/: build_review_handoff.py  contest.py  contest_review_orchestrator.py
contest_v2/tests/: test_core.py  test_learning_registry.py  test_review_handoff_admission.py  test_review_orchestrator.py
docs/: CONTEST_V2_ARCHITECTURE.md
(+1485 files in other folders)
