[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "contest-production-v2"
version = "0.2.0"
description = "轻量的数学建模比赛生产链"
requires-python = ">=3.11"

[project.scripts]
contest = "contest_v2.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
